Score, Health and Pause mechanics

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>ArrowGame 2.0</h1>
-    <canvas id="canvas" width="600" height="600"></canvas>
+    <div id="container">
+      <h3 id="score" class="score"></h3>
+      <div>
+        <h1>ArrowGame 2.0</h1>
+        <canvas id="canvas" width="600" height="600"></canvas>
+      </div>
+      <h3 class="score" id="health">Health: 5</h3>
+    </div>
+
     <script src="src/main.ts" type="module"></script>
   </body>
 </html>
