--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div id="container">
-      <h3 id="score" class="score"></h3>
+      <h3 id="score" class="score">Score: 0</h3>
       <div>
         <h1>ArrowGame 2.0</h1>
         <canvas id="canvas" width="600" height="600"></canvas>
       </div>
-      <h3 class="score" id="health">Health: 5</h3>
+      <h3 class="score" id="health">Health: 0</h3>
     </div>
 
     <script src="src/main.ts" type="module"></script>
